{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 14,
  "lineage": "8f9345ee-eb12-9388-c79a-ce7134a619d1",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006dcf34c09e50022",
            "arn": "arn:aws:ec2:us-east-1:633840464354:instance/i-07618cc105fba1208",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07618cc105fba1208",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09891c388fdf4251f",
            "private_dns": "ip-10-0-0-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bdfedbaae6f75b20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae0e2a9873928f6e",
            "tags": {
              "Name": "webserver-us-east-1"
            },
            "tags_all": {
              "Name": "webserver-us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7ae32358dd2a2b1"
            ]
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_security_group.webserver",
            "module.instances.aws_subnet.subnet",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:internet-gateway/igw-0e65e6091d3fc0040",
            "id": "igw-0e65e6091d3fc0040",
            "owner_id": "633840464354",
            "vpc_id": "vpc-0af7752963213f068"
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subent_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:route-table/rtb-00655542cb2b552fc",
            "id": "rtb-00655542cb2b552fc",
            "owner_id": "633840464354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e65e6091d3fc0040",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0af7752963213f068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_internet_gateway.igw",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d77aee4e76b83d5",
            "route_table_id": "rtb-00655542cb2b552fc",
            "subnet_id": "subnet-0ae0e2a9873928f6e"
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_internet_gateway.igw",
            "module.instances.aws_route_table.subent_route",
            "module.instances.aws_subnet.subnet",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:security-group/sg-0a7ae32358dd2a2b1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a7ae32358dd2a2b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "156.221.14.70/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240321011541457000000002",
            "name_prefix": "terraform-",
            "owner_id": "633840464354",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0af7752963213f068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:subnet/subnet-0ae0e2a9873928f6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae0e2a9873928f6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633840464354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1"
            },
            "tags_all": {
              "Name": "subnet-us-east-1"
            },
            "vpc_id": "vpc-0af7752963213f068"
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:vpc/vpc-0af7752963213f068",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0770818d76ab468ca",
            "default_route_table_id": "rtb-001bc4a75286d74fd",
            "default_security_group_id": "sg-0ed94a80c785f9b6b",
            "dhcp_options_id": "dopt-0c021e155bf3fcc34",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af7752963213f068",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001bc4a75286d74fd",
            "owner_id": "633840464354",
            "tags": {
              "Name": "vpc-us-east-1"
            },
            "tags_all": {
              "Name": "vpc-us-east-1"
            }
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:vpc-endpoint/vpce-05ce0bdf786e6ddde",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-05ce0bdf786e6ddde",
            "owner_id": "633840464354",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "tags": {
              "Name": "dynamodb-us-east-1"
            },
            "tags_all": {
              "Name": "dynamodb-us-east-1"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0af7752963213f068"
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633840464354:vpc-endpoint/vpce-0f0059de99003deaf",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0f0059de99003deaf",
            "owner_id": "633840464354",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint-us-east-1"
            },
            "tags_all": {
              "Name": "s3-endpoint-us-east-1"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0af7752963213f068"
          },
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.main",
            "module.instances.aws_vpc.myvpc",
            "module.s3.aws_s3_bucket.mybucket"
          ]
        }
      ]
    }
  ]
}